--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services:10.2.4'
-    compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'de.hdodenhof:circleimageview:1.2.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services:10.2.4'
+    implementation 'com.google.android.gms:play-services-location:8.4.0'
+    implementation 'com.android.support:design:25.0.1'
+    implementation 'com.android.support:recyclerview-v7:25.0.1'
+    implementation 'com.android.support:cardview-v7:25.0.1'
+    implementation 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'de.hdodenhof:circleimageview:1.2.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     testCompile 'junit:junit:4.12'
 }
